# team-size-webhook-main

./: .dockerignore  .gitignore  ASYNC_TROUBLESHOOTING.md  Dockerfile  RAILWAY_SETUP.md  README.md  architecture.md  check_async.py  docker-compose.prod.yml  docker-compose.yml  overview.md  plan.md  prompts.py  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  team_size_estimator.py
src/: __init__.py  main.py
src/api/: dependencies.py  middleware.py
src/api/v1/: router.py
src/api/v1/endpoints/: enrichment.py  health.py
src/clients/: __init__.py  base.py  grok.py  oxylabs.py  serper.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  exceptions.py  logging.py  redis.py
src/prompts/: __init__.py  templates.py
src/schemas/: __init__.py  internal.py  requests.py  responses.py
src/services/: __init__.py  ai_analyzer.py  enrichment.py  link_extractor.py  scraper.py  search.py  tech_detector.py
src/worker/: __init__.py  celery_app.py  tasks.py
tests/: conftest.py  test_async_endpoints.py  test_enrichment_endpoint.py  test_health_endpoints.py  test_load.py  test_middleware.py
